--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <center>
         <h1 class="welcom">WELCOME</h1>
         <br>
-        <a href="Reservez.html"><h3  class="reservez">Réserver Une Voiture</h3></a>
+        <a href="Reservez.html"><h3  class="reservez">Réserver</h3></a>
         </center>
         <div id="list" class="list"></div>
     <div class="imgg"></div>
