--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>location</title>
+    <title>Topcar location de voiture</title>
+     <meta name="keywords content="location,véhicules, voiture,agence,voyage>
+     <meta name="description content="Topcar est une agence spécialisée dans la location de voitures, offrant une large gamme de véhicules adaptés à tous vos besoins. Que vous ayez besoin d’une voiture pour un voyage d'affaires, des vacances ou une occasion spéciale, nous proposons des solutions flexibles et abordables. Profitez de notre service rapide, de véhicules bien entretenus, et d’un support client personnalisé pour rendre votre expérience agréable et sans stress. Réservez dès maintenant et voyagez en toute liberté !>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_phone.css">
     <link href="img/logo.jpg" rel="icon">
