--- a/Reservez.html
+++ b/Reservez.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_phone.css">
     <link href="img/logo.jpg" rel="icon">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JZVN293J31"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JZVN293J31');
+</script>
  <style>
     .voiture {
                                     position: relative;
